2016-09-16  Kirit Saelensminde  <kirit@felspar.com>
 Remove direct calls to `boost::spirit::parse` due to threading problems.

2016-09-10  Kirit Saelensminde  <kirit@felspar.com>
 *Initial version of new splitter API that uses views to cut down on memory allocations.
 * Add additional APIs for `utf::u8_view`

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
 Allow construction and assignment of `fostlib::json` from nullable atomic types.

2016-09-05  Kirit Saelensminde  <kirit@felspar.com>
 * Added a UTF8 string view
 * Added a JSON parse overload for UTF8 buffers and added extra tests.

2016-08-27  Kirit Saelensminde  <kirit@felspar.com>
 * Add `json_embedded_parser` which doesn't allow whitespace around the JSON.
 * Add default constructors to the JSON parsers so they can be const constructed.

2016-08-04  Kirit Saelensminde  <kirit@felspar.com>
 Ensure that the lengths match before comparing the data in `crypto_compare`.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Added initial support for minting and checking JWT.
 * Extra information for the `not_implemented` constructor can now be anything coercible to JSON. Also remove the exception from the `fost/core` header.
 * Make public a `jcursor` constructor so we can copy part of another one.
 * `jcursor` parts can be compared for equaility with string literals.
 * The `not_implemented` exception can now be given JSON as its third argument.
 * Add in nliteral comparison overloads in a couple of places they were missing.

2016-07-11  Kirit Saelensminde  <kirit@felspar.com>
 Fix a long standing bug in the Base64 encoder where it would add bad data when the data length was exactly divisible by 3.

2016-06-10  Kirit Saelensminde  <kirit@felspar.com>
 * Add a `fostlib::json::unparse` that takes a `fostlib::string`.
 * Add a `fostlib::json::get` overload that can be given a default to substitute if the value doesn't exist.