@@ -65,13 +65,13 @@ namespace {
             }
             bool operator () ( const fostlib::log::message &m ) {
                 if ( colour ) {
-                    if ( m.level() <= fostlib::log::debug_level_tag::level() ) {
+                    if ( m.level() <= fostlib::log::debug_level_tag::level()  + 0x100 ) {
                         COUT << "\33[0;37m";
-                    } else if ( m.level() <= fostlib::log::info_level_tag::level() ) {
+                    } else if ( m.level() <= fostlib::log::info_level_tag::level() + 0x300 ) {
                         COUT << "\33[0;32m";
-                    } else if ( m.level() <= fostlib::log::warning_level_tag::level() ) {
+                    } else if ( m.level() <= fostlib::log::warning_level_tag::level() + 0x2000 ) {
                         COUT << "\33[1;33m";
-                    } else if ( m.level() <= fostlib::log::error_level_tag::level() ) {
+                    } else if ( m.level() <= fostlib::log::error_level_tag::level() + 0x20000 ) {
                         COUT << "\33[0;31m";
                     } else {
                         COUT << "\33[1;31m";
